--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery-3.7.1.min.js"></script>
-	<script src="js/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -19,28 +19,22 @@
                 <div class="swiper"> 
                     <ul class="swiper-wrapper"> 
                         <li class="swiper-slide">
-                            <div class="popup_title 1">
-                                <a href="#n">
-                                    <strong>에어로케이 탑승객 대상 호텔 할인</strong>
-                                    <div class="visual_title_L">최대 64%</div>
-                                </a>
-                            </div>
+                            <a class="popup_title_1" href="#n">
+                                <strong>에어로케이 탑승객 대상 호텔 할인</strong>
+                                <div class="visual_title_L">최대 64%</div>
+                            </a>
                         </li>
                         <li class="swiper-slide">
-                            <div class="popup_title 2">
-                                <a href="#n">
-                                    <strong>와이파이도시락/USIM/eSIM</strong>
-                                    <div class="visual_title_L">최대 10% 할인 혜택</div>
-                                </a>
-                            </div>
+                            <a class="popup_title_2" href="#n">
+                                <strong>와이파이도시락/USIM/eSIM</strong>
+                                <div class="visual_title_L">최대 10% 할인 혜택</div>
+                            </a>
                         </li> 
-                        <li class="swiper-slide">
-                            <div class="popup_title 3">
-                                <a href="#n">
-                                    <strong>에어로케이 항공 탑승객 대상</strong>
-                                    <div class="visual_title_L">에어로케이 x 신라면세점 제휴 혜택</div>
-                                </a>
-                            </div>
+                        <li class="swiper-slide">                    
+                            <a class="popup_title_3" href="#n">
+                                <strong>에어로케이 항공 탑승객 대상</strong>
+                                <div class="visual_title_L">에어로케이 x 신라면세점 제휴 혜택</div>
+                            </a>                        
                         </li> 
                     </ul>
                     <div class="swiper-pagination"></div>
@@ -49,6 +43,7 @@
                     <div class="title">
                         에어로케이와 함께하는 첫 걸음<br>출발지를 선택하세요
                     </div>
+                    
                     <div class="checkbox">
                         <div class="active">
                             <span></span>
