--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -19,19 +19,20 @@
                 <div class="swiper"> 
                     <ul class="swiper-wrapper"> 
                         <li class="swiper-slide">
-                            <a class="popup_title_1" href="#n">
-                                <strong>에어로케이 탑승객 대상 호텔 할인</strong>
-                                <div class="visual_title_L">최대 64%</div>
-                            </a>
-                        </li>
-                        <li class="swiper-slide">
                             <a class="popup_title_2" href="#n">
                                 <strong>와이파이도시락/USIM/eSIM</strong>
                                 <div class="visual_title_L">최대 10% 할인 혜택</div>
                             </a>
-                        </li> 
+                        </li>
+                        <li class="swiper-slide">
+                            <a class="popup_title_1" href="#n">
+                                <div class="logo">로고</div>
+                                <strong>에어로케이 탑승객 대상 호텔 할인</strong>
+                                <div class="visual_title_L">최대 64%</div>
+                            </a>
+                        </li>
                         <li class="swiper-slide">                    
-                            <a class="popup_title_3" href="#n">
+                            <a class="popup_title_3" href="#n">                            
                                 <strong>에어로케이 항공 탑승객 대상</strong>
                                 <div class="visual_title_L">에어로케이 x 신라면세점 제휴 혜택</div>
                             </a>                        
@@ -57,34 +58,35 @@
                             <div class="form_group route_point">
                                 <div class="inner">
                                     <label for="origin">출발지</label>
-                                    <input type="text" style="width:8.29rem;" id="route-start" name="출발지"/>
+                                    <input type="text" id="route-start" name="출발지"/>
                                 </div>
                                 <div class="inner">
                                     <label for="origin">도착지</label>
-                                    <input type="text" style="width:8.29rem;" id="route-end" name="도착지"/>
+                                    <input type="text" id="route-end" name="도착지"/>
                                 </div>
                             </div>
                             <div class="form_group date">
                                 <div class="inner">
                                     <label for="origin">날짜</label>
-                                    <input type="text" style="width:8.29rem;" id="date-tart" name="날짜시작"/>
+                                    <input type="text" id="date-start" name="날짜시작"/>
                                 </div>
                                 <div class="inner">
                                     <label for="origin">날짜</label>
-                                    <input type="text" style="width:8.29rem;" id="date-end" name="날짜종료"/>
+                                    <input type="text" id="date-end" name="날짜종료"/>
                                 </div>
                             </div>
                             <div class="form_group booking_options">
                                 <div class="inner">
                                     <label for="origin">인원선택</label>
-                                    <input type="number" style="width:8.29rem;"id="people-count" name="인원수"/>
+                                    <input type="number" id="people-count" name="인원수"/>
                                 </div>
                                 <div class="inner">
                                     <label for="origin">프로모션코드</label>
-                                    <input type="text" style="width:8.29rem;" id="promo-code" name="날짜종료" placeholder="코드 입력"/>
+                                    <input type="text" id="promo-code" name="날짜종료" placeholder="코드 입력"/>
                                 </div>
                             </div>
                         </div>
+                        <button>항공편조회</button>
                     </div>
                 </div>
         </section>
