--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -167,103 +167,214 @@
         </section>
         <section class="travel">
             <div class="wrapper">
-                <div class="title">
-                    에케와 함께 떠는 여행
-                </div>
+                <div class="title">에케와 함께 떠는 여행</div>
                 <div class="tab_menu">
-                    <div class="japan"><a class="active" href="#n">일본</a></div>
-                    <div class="dongnum"><a href="#n">동남아</a></div>
+                    <ul>
+                      <li class="active"><a href="#section1">일본</a></li>
+                      <li><a href="#section2">동남아</a></li>
+                    </ul>
                 </div>
-                <div class="event_popup">
-                    <strong>일본 특가 프로모션</strong>
-                    <div class="event_title_s">국제선 일본 운항</div>
-                    <span>기간 9.24(화)-9.30(월) 17:00</span>
-                    <button>바로가기</button>
+                <div class="tab_content">
+                    <section id="section1" class="active">
+                        <div class="event_popup">
+                            <strong>일본 특가 프로모션</strong>
+                            <div class="event_title_s">국제선 일본 운항</div>
+                            <span>기간 9.24(화)-9.30(월) 17:00</span>
+                            <button>바로가기</button>
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo osaka">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 오사카</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">72,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#일본</label>
+                                            <label for="봄여행">#봄여행</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo kyoto">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 교토</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">71,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#초특가_일본여행</label>
+                                            <label for="봄여행">#벚꽃</label>
+                                            <label for="봄여행">#교토</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo tokyo">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 도쿄</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">102,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#시티뷰</label>
+                                            <label for="봄여행">#디즈니랜드</label>
+                                            <label for="봄여행">#쇼핑</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo satporo">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 삿포로</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">90,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#일본스키여행</label>
+                                            <label for="봄여행">#삿포로눈축제</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                    <section id="section2">
+                        <div class="event_popup b">
+                            <strong>동남아 특가 프로모션</strong>
+                            <div class="event_title_s">국제선 동남아 운항</div>
+                            <span>기간 9.24(화)-9.30(월) 17:00</span>
+                            <button>바로가기</button>
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo thailand">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 태국</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">72,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#태국</label>
+                                            <label for="봄여행">#여름여행</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo phuket">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 푸켓</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">81,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#초특가_태국여행</label>
+                                            <label for="봄여행">#푸켓</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo chiang_mai">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 치앙마이</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">102,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#푸른바다</label>
+                                            <label for="봄여행">#열대휴양</label>
+                                            <label for="봄여행">#힐링</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#n">
+                                    <div class="photo vietnam">이미지</div>
+                                    <div class="inner">
+                                        <strong>청주 > 베트남</strong>
+                                        <div class="date">
+                                            <div class="first">
+                                                <span>출발</span><span>08:25</span>
+                                            </div>
+                                            <div class="icon">아이콘</div>
+                                            <div class="end">
+                                                <span>도착</span><span>10:25</span>
+                                            </div>
+                                        </div>
+                                        <div class="money">92,000원</div>
+                                        <div class="label_group">
+                                            <label for="일본">#전통</label>
+                                            <label for="봄여행">#스냅여행</label>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
                 </div>
-                <ul>
-                    <li>
-                        <a href="#n">
-                            <div class="photo">이미지</div>
-                            <div class="inner">
-                                <strong>청주 > 오사카</strong>
-                                <div class="date">
-                                    <div class="first">
-                                        <span>출발</span><span>08:25</span>
-                                    </div>
-                                    <div class="icon">아이콘</div>
-                                    <div class="end">
-                                        <span>도착</span><span>10:25</span>
-                                    </div>
-                                </div>
-                                <div class="money">72,000원</div>
-                                <label for="일본">#일본</label>
-                                <label for="봄여행">#봄여행</label>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo">이미지</div>
-                            <div class="inner">
-                                <strong>청주 > 교토</strong>
-                                <div class="date">
-                                    <div class="first">
-                                        <span>출발</span><span>08:25</span>
-                                    </div>
-                                    <div class="icon">아이콘</div>
-                                    <div class="end">
-                                        <span>도착</span><span>10:25</span>
-                                    </div>
-                                </div>
-                                <div class="money">71,000원</div>
-                                <label for="일본">#초특가_일본여행</label>
-                                <label for="봄여행">#벚꽃</label>
-                                <label for="봄여행">#교토</label>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo">이미지</div>
-                            <div class="inner">
-                                <strong>청주 > 도쿄</strong>
-                                <div class="date">
-                                    <div class="first">
-                                        <span>출발</span><span>08:25</span>
-                                    </div>
-                                    <div class="icon">아이콘</div>
-                                    <div class="end">
-                                        <span>도착</span><span>10:25</span>
-                                    </div>
-                                </div>
-                                <div class="money">102,000원</div>
-                                <label for="일본">#시티뷰</label>
-                                <label for="봄여행">#디즈니랜드</label>
-                                <label for="봄여행">#쇼핑</label>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#n">
-                            <div class="photo">이미지</div>
-                            <div class="inner">
-                                <strong>청주 > 삿포로</strong>
-                                <div class="date">
-                                    <div class="first">
-                                        <span>출발</span><span>08:25</span>
-                                    </div>
-                                    <div class="icon">아이콘</div>
-                                    <div class="end">
-                                        <span>도착</span><span>10:25</span>
-                                    </div>
-                                </div>
-                                <div class="money">90,000원</div>
-                                <label for="일본">#일본스키여행</label>
-                                <label for="봄여행">#삿포로눈축제</label>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </section>
         <section class="event ticket"></section>
