event tiket list
button navgation 구현해야함

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -276,7 +276,7 @@
                         </ul>
                     </section>
                     <section id="section2">
-                        <div class="event_popup b">
+                        <div class="event_popup">
                             <strong>동남아 특가 프로모션</strong>
                             <div class="event_title_s">국제선 동남아 운항</div>
                             <span>기간 9.24(화)-9.30(월) 17:00</span>
@@ -377,7 +377,119 @@
                 </div>
             </div>
         </section>
-        <section class="event ticket"></section>
+        <section class="event_ticket">
+            <div class="wrapper">
+                <div class="title">오직 에케에서만<br>특별한 혜택</div>
+                <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소 -->
+                    <ul class="swiper-wrapper">
+                        <li class="swiper-slide">
+                            <div class="photo gundam">이미지</div>
+                            <div class="tiket_info">
+                            <div class="tiket_title">도쿄 오다이바 건담 특선</div>
+                                <ul>
+                                    <li>
+                                        <strong>남은 일수</strong>
+                                        <em>D-31</em>
+                                    </li>
+                                    <li>
+                                        <strong>날짜</strong>
+                                        <div class="inner">
+                                            <span>2025-03-01</span>
+                                            <span>-</span>
+                                            <span>2025-04-02</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <strong>장소</strong>   
+                                        <span>오다이바</span>
+                                    </li>
+                                </ul>
+                                <button>예약하기</button>
+                                <div class="barcod">바코드</div>
+                            </div>
+                        </li>
+                        <li class="swiper-slide">
+                            <div class="photo nagoya">이미지</div>
+                            <div class="tiket_info">
+                                <div class="tiket_title">에케 청주 나고야</div>
+                                <ul>
+                                    <li>
+                                        <strong>남은 일수</strong>
+                                        <em>D-2</em>
+                                    </li>
+                                    <li>
+                                        <strong>날짜</strong>
+                                        <div class="inner">
+                                            <span>2025-02-12</span>
+                                            <span>-</span>
+                                            <span>2025-02-14</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <strong>장소</strong>   
+                                        <span>나고야</span>
+                                    </li>
+                                </ul>
+                                <button>예약하기</button>
+                                <div class="barcod">바코드</div>
+                            </div>             
+                        </li>
+                        <li class="swiper-slide">
+                            <div class="photo yukie">이미지</div>
+                            <div class="tiket_info">
+                                <div class="tiket_title">청주 삿포로 눈꽃 축제</div>
+                                <ul>
+                                    <li>
+                                        <strong>남은 일수</strong>
+                                        <em>D-60</em>
+                                    </li>
+                                    <li>
+                                        <strong>날짜</strong>
+                                        <div class="inner">
+                                            <span>2025-03-01</span>
+                                            <span>-</span>
+                                            <span>2025-04-02</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <strong>장소</strong>   
+                                        <span>몽골</span>
+                                    </li>
+                                </ul>
+                                <button>예약하기</button>
+                                <div class="barcod">바코드</div>
+                            </div>
+                        </li>
+                        <li class="swiper-slide">
+                            <div class="photo ora">이미지</div>
+                            <div class="tiket_info">
+                                <div class="tiket_title">몽골 오로라 테를지 국립공원</div>
+                                <ul>
+                                    <li>
+                                        <strong>남은 일수</strong>
+                                        <em>D-31</em>
+                                    </li>
+                                    <li>
+                                        <strong>날짜</strong>
+                                        <div class="inner">
+                                            <span>2025-03-01</span>
+                                            <span>-</span>
+                                            <span>2025-04-02</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <strong>장소</strong>   
+                                        <span>몽골</span>
+                                    </li>
+                                </ul>
+                                <button>예약하기</button>
+                                <div class="barcod">바코드</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section class="help"></section>
         <section class="news"></section>
         <footer></footer>
