last section 하는중
..

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -6,8 +6,8 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/layout.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="js/gsap.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -514,10 +514,124 @@
             <div class="wrapper">
                 <div class="title">에케의 소식을 여기에 모았어요</div>
                 <div class="section"> <!-- 좌우 요소를 감싸는 요소 -->
-                    <div class="tit">고정요소</div> <!-- 고정될 요소 -->
+                    <div class="tit">
+                        <div class="fix_title">에어로 케이<br>어디까지 만나봤니?</div>
+                        <button>브랜드만나보기</button>
+                    </div> <!-- 고정될 요소 -->
                     <div class="cont_wrap"> <!-- 스크롤될 요소를 감싸는 요소 -->
                         <div class="cont"> <!-- 스크롤될 요소 (이 내부에 콘텐츠를 코딩해야함, 스크롤될 요소가 여러개면 안됨) -->
-                            스크롤될 콘텐츠
+                            <ul>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#n">
+                                        <div class="photo">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
+                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <ul>
+                                            <li class="active">#도쿄</li>
+                                            <li>#여행자</li>
+                                            <li>#카페</li>
+                                            <li>#에디터</li>
+                                        </ul>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
